# ko-su-kanri

./: .env  compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
app/: main.py
app/database/: alembic.ini
app/database/alembic/: env.py
app/database/alembic/versions/: 26ebd28674f3_create_t_user_work_types_table.py  32db66416ec9_create_t_users_table.py  4dc65d069737_create_m_work_types_table.py  583418c86774_create_t_work_records_table.py
app/database/sqlalchemy/: t_users.py  t_work_records.py  tests.py
app/models/: Users.py
app/repositories/: t_users.py  t_work_records.py
app/routers/: root.py
app/routers/api/: __init__.py
app/routers/api/v1/: __init__.py
app/routers/api/v1/insert/: __init__.py  set_times.py
app/routers/api/v1/schema/: base.py
app/routers/api/v1/schema/request/: base.py  set_times.py
app/settings/: database.py  env.py
docker/python/: Dockerfile
