[tool.poetry]
name = "fast-api-learn"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.100.1"
uvicorn = "^0.23.1"
sqlalchemy = "^2.0.23"
alembic = "^1.13.0"
mysqlclient = "^2.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
